Compile only the components a topology event touches, in per-tick batches
Every placed, removed or edited device used to compile the whole
registry and read every island (about 19 ms per event with 5,000
devices, growing with the square of a command's size). Now:

* submit walks from the edited position only through applied devices
  that no island owns and no queued event edits, and stops at an owned
  device (its island is fenced whole) or a queued one (its event orders
  this one), so a touched set is a neighbourhood, not an island.
* Queued events wait for the next tick's hook, or for a read that
  needs them (a view, a capture, a filter recovery), or for 1,024
  queued events, and apply as batches: every event of one tick and one
  dimension whose owners are aligned, in queue order. A batch compiles
  only the connected components, after it, of the devices it touched
  and of the islands it replaces, reads only those islands, and keeps
  the per-device diagnostics, pipe views, owners, members and chunk
  index of the rest. A filter recovery still applies alone and at once.
* Opt-in counters count batches, events and compiled devices.

Island identity, revisions, fences, event ticks and certificates of
untouched islands are unchanged.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>